--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,11 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+   // testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+   // testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     // https://mvnrepository.com/artifact/io.rest-assured/rest-assured
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.4.0'
-
+    testImplementation group: 'org.testng', name: 'testng', version: '7.6.1'
 }
 
 test {
